Added new stylesheet, removed footer, and changed logo

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="./css/settings.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/user.css" />
   </head>
 
   <body>
@@ -48,7 +49,7 @@
             <div class="col">
               <!-- Brand Logo -->
               <div class="brand-logo">
-                <img src="image/logo.png" />
+                <img src="image/logo-white.png" class="logo"/>
               </div>
             </div>
 
@@ -73,7 +74,7 @@
           <div class="row align-items-center">
             <div class="col-md-4 col-7">
               <a href="index.html" class="site-brand">
-                <img src="./image/logo.png" alt="" />
+                <img src="./image/logo-white.png" alt=""/>
               </a>
             </div>
             <div class="col-md-8 col-5 text-right">
@@ -240,7 +241,7 @@
       <!-- Footer Section -->
       <footer class="section-padding-top footer-bg shape-holder">
         <div class="container">
-          <div
+          <!-- <div
             class="row justify-content-md-center justify-content-lg-left space-db--40"
           >
             <div class="col-lg-1 col-md-2 col-sm-3 col-4 mb--40">
@@ -292,7 +293,7 @@
                 </ul>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="copyright-area pt--60 pt-md--80 pb--40">
             <div class="row align-items-center space-db--10">
