Line width update

--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
       <section class="hero-area">
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-xl-7 col-lg-8 col-md-10">
+            <div class="col-xl-8 col-lg-9 col-md-11">
               <div class="hero-content">
                 <h1 class="title h2">
                   Decentralized Messaging
                 </h1>
                 <p>
-                  A fully decentralized messaging platform built on Ethereum.
+                  A fully decentralized messaging platform built on Ethereum.<br>
                   Send and receive messages from Ethereum addresses and ENS
                   domains.
                 </p>
