Deleted footer and added demo video link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="col">
               <!-- Brand Logo -->
               <div class="brand-logo">
-                <img src="image/logo-white.png" class="logo"/>
+                <img src="image/logo-white.png" class="logo" />
               </div>
             </div>
 
@@ -74,7 +74,7 @@
           <div class="row align-items-center">
             <div class="col-md-4 col-7">
               <a href="index.html" class="site-brand">
-                <img src="./image/logo-white.png" alt=""/>
+                <img src="./image/logo-white.png" alt="" />
               </a>
             </div>
             <div class="col-md-8 col-5 text-right">
@@ -123,13 +123,17 @@
                   Decentralized Messaging
                 </h1>
                 <p>
-                  A fully decentralized messaging platform built on Ethereum.<br>
+                  A fully decentralized messaging platform built on Ethereum.<br />
                   Send and receive messages from Ethereum addresses and ENS
-                  domains.
+                  domains.<br />
+                  Coming soon.
                 </p>
                 <div class="hero-btn">
-                  <a href="#" class="btn btn--white hvr-shine"
-                    >Start free 14 days trial</a
+                  <a
+                    href="https://www.youtube.com/watch?v=Cwwbg7JJbvc"
+                    target="_blank"
+                    class="btn btn--white hvr-shine"
+                    >Demo Video</a
                   >
                 </div>
               </div>
@@ -240,7 +244,7 @@
 
       <!-- Footer Section -->
       <footer class="section-padding-top footer-bg shape-holder">
-        <div class="container">
+        <!-- <div class="container"> -->
           <!-- <div
             class="row justify-content-md-center justify-content-lg-left space-db--40"
           >
@@ -295,7 +299,7 @@
             </div>
           </div> -->
 
-          <div class="copyright-area pt--60 pt-md--80 pb--40">
+          <!-- <div class="copyright-area pt--60 pt-md--80 pb--40">
             <div class="row align-items-center space-db--10">
               <div class="col-lg-2 offset-lg-2 col-md-3 order-md-3 mb--10">
                 <ul class="footer-list social-list">
@@ -320,11 +324,11 @@
                 </ul>
               </div>
               <div class="col-lg-3 col-md-4 col-sm-5 order-md-1  mb--10">
-                <p class="mb-0">© 2019 Grayic. All rights reserved</p>
+                <p class="mb-0">Site: Grayic © 2019</p>
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="footer-shapes">
           <div class="shape-1">
             <img src="./image/footer-shape.svg" alt="" />
